# db_mirror

./: Cargo.toml  README.md
src/: config.rs  copy_tables.rs  create_connection.rs  get_db_tables.rs  main.rs
