[package]
name = "db_mirror"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
env_logger = "0.11.8"
log = "0.4.27"
serde = "1.0.218"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlx-mysql", "mysql"] }
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
